<resources>
    <string name="app_name">Affirmations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcomeText_ICan">Я могу</string>
    <string name="welcomeText_IWant">Я хочу</string>
    <string name="welcomeText_IWill">Я стану</string>
    <string name="welcomeText_Description">Это приложение поможет вам ловить настрой и не забывать,как вы прекрасны</string>
    <string name="welcomeText_Button">Вперед!</string>
    <string name="welcomeName_HintName">Ваше Имя</string>
    <string name="welcomeName_NameDescription">Введите, Пожалуйста, ваше имя</string>
    <string name="welcomeName_Button">Дальше!</string>
    <string name="welcomeSettings_title">Количество аффирмаций в день</string>
    <string name="welcomeSettings_Button">Готово!</string>

</resources>